add sort category by most popular
